fix java version, added tests on changed logic